# queuelip

./: .gitignore  BUILDING.md  CLAUDE.md  LICENSE  README.md  accordion-manager.js  accordion.css  dashboard.html  index.html  main.js  mini.html  package.json  popup-common.js  popupA.html  popupB.html  popupC.html  style.css  vite.config.js
.claude/: settings.local.json
.github/workflows/: claude.yml  release.yml
css/: base.css  components.css  dashboard.css  layout.css  mini.css  utilities.css
html/: version-info.html
js/: dashboard-init.js  dashboard.js  focus-manager.js  html-loader.js  legacy.js  main-init.js  main.js  mini-init.js  mini.js  navigation.js  popbuttons.js  time.js  ui.js  version.js  view-loader.js
js/views/: view-a.js  view-b.js  view-c.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
views/: README.md  view-a.html  view-b.html  view-c.html
