[package]
name = "queuelip"
version = "0.1.0"
description = "A clipboard manager with queue behavior"
authors = ["koach-noir"]
license = "MIT"
repository = "https://github.com/koach-noir/queuelip"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "clipboard-all", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]